--- a/notebooks/download_dataset.ipynb
+++ b/notebooks/download_dataset.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: Roboflow in /usr/local/lib/python3.12/dist-packages (1.2.13)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.12/dist-packages (from Roboflow) (2026.1.4)\n",
@@ -63,12 +49,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"38Bb4xtLGTD5P5vdhm6M\")\n",
-        "workspace = rf.workspace()\n",
-        "print(workspace)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,11 +57,10 @@
         "id": "Ivp2MBBrhP3y",
         "outputId": "de82b7f1-3ebb-4ec1-cee9-7431343ebc65"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\rloading Roboflow workspace...\n",
             "{\n",
@@ -93,14 +73,17 @@
             "}\n"
           ]
         }
+      ],
+      "source": [
+        "from roboflow import Roboflow\n",
+        "rf = Roboflow(api_key=\"your_roboflow_api_key_here\")\n",
+        "workspace = rf.workspace()\n",
+        "print(workspace)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ws = rf.workspace(\"trafficsignaldetection-lti5q\")  # or leave blank for default\n",
-        "ws.list_projects()   # prints all projects in that workspace"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -108,24 +91,24 @@
         "id": "LfyWC-qliskT",
         "outputId": "1a98a017-9764-409d-843d-74eb0ec7a367"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\rloading Roboflow workspace...\n",
             "[{'id': 'trafficsignaldetection-lti5q/traffic-signal-m5bdo-trspi', 'type': 'object-detection', 'name': 'Traffic Signal', 'created': 1732862822.373, 'updated': 1771331499.962, 'images': 1280, 'unannotated': 0, 'annotation': 'traffic', 'versions': 1, 'public': True, 'multilabel': False, 'license': 'CC BY 4.0', 'splits': {'train': 1002, 'valid': 102, 'test': 176}, 'colors': {'red-traffic-lights': '#FFFF00', 'green-traffic-lights': '#00B7EB', 'yellow-traffic-lights': '#0E7AFE'}, 'classes': {'red-traffic-lights': 871, 'yellow-traffic-lights': 321, 'green-traffic-lights': 403}, 'icon': {'original': 'https://source.roboflow.com/GMJWCu4IxXR9gLm3wQF5LE45RpH2/bWiMnhCMVUzaCue6EYXw/original.jpg', 'thumb': 'https://source.roboflow.com/GMJWCu4IxXR9gLm3wQF5LE45RpH2/bWiMnhCMVUzaCue6EYXw/thumb.jpg', 'annotation': 'https://source.roboflow.com/GMJWCu4IxXR9gLm3wQF5LE45RpH2/bWiMnhCMVUzaCue6EYXw/annotation-traffic.png'}, 'preprocessing': {}, 'augmentation': {}}, {'id': 'trafficsignaldetection-lti5q/traffic_signal_detection', 'type': 'object-detection', 'name': 'traffic_signal_detection', 'created': 1769430429.798, 'updated': 1771339576.806, 'images': 1276, 'unannotated': 1276, 'annotation': 'objects', 'versions': 0, 'public': True, 'multilabel': False, 'license': 'CC BY 4.0', 'splits': {'train': 999, 'valid': 101, 'test': 176}, 'colors': {'0': '#C7FC00', '1': '#8622FF', '2': '#FE0056'}, 'classes': {'0': 402, '1': 868, '2': 321}, 'icon': {'original': 'https://source.roboflow.com/GMJWCu4IxXR9gLm3wQF5LE45RpH2/uQxOaXYm7FUyrFhIjzXN/original.jpg', 'thumb': 'https://source.roboflow.com/GMJWCu4IxXR9gLm3wQF5LE45RpH2/uQxOaXYm7FUyrFhIjzXN/thumb.jpg', 'annotation': None}, 'preprocessing': {'auto-orient': True, 'resize': {'format': 'Stretch to', 'width': 512, 'height': 512}}, 'augmentation': {}}]\n"
           ]
         }
+      ],
+      "source": [
+        "ws = rf.workspace(\"trafficsignaldetection-lti5q\")  # or leave blank for default\n",
+        "ws.list_projects()   # prints all projects in that workspace"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "projects = ws.projects()\n",
-        "print(projects)  # list of project ids like 'trafficsignaldetection-lti5q/traffic_signal_detection'"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -133,19 +116,71 @@
         "id": "AKZoKOGtj6LR",
         "outputId": "aa7f1dbd-609a-4833-8a35-cbc151735e10"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['trafficsignaldetection-lti5q/traffic-signal-m5bdo-trspi', 'trafficsignaldetection-lti5q/traffic_signal_detection']\n"
           ]
         }
+      ],
+      "source": [
+        "projects = ws.projects()\n",
+        "print(projects)  # list of project ids like 'trafficsignaldetection-lti5q/traffic_signal_detection'"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZUDQGMJOkK_T",
+        "outputId": "046df6ac-bb32-47ca-8c3b-13e80f2cf858"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "loading Roboflow workspace...\n",
+            "loading Roboflow project...\n",
+            "Exporting format yolov8 in progress : 85.0%\n",
+            "Version export complete for yolov8 format\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Downloading Dataset Version Zip in Traffic-Signal-1 to yolov8:: 100%|██████████| 102037/102037 [00:03<00:00, 28861.08it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Extracting Dataset Version Zip to Traffic-Signal-1 in yolov8:: 100%|██████████| 2572/2572 [00:01<00:00, 2129.88it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\rloading Roboflow project...\n"
+          ]
+        }
+      ],
       "source": [
         "from roboflow import Roboflow\n",
         "\n",
@@ -159,59 +194,11 @@
         "# Now upload to your target project\n",
         "target_project = source_ws.project(\"traffic_signal_detection\")\n",
         "# Use the Roboflow web UI to upload, or use the CLI command below\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZUDQGMJOkK_T",
-        "outputId": "046df6ac-bb32-47ca-8c3b-13e80f2cf858"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "loading Roboflow workspace...\n",
-            "loading Roboflow project...\n",
-            "Exporting format yolov8 in progress : 85.0%\n",
-            "Version export complete for yolov8 format\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading Dataset Version Zip in Traffic-Signal-1 to yolov8:: 100%|██████████| 102037/102037 [00:03<00:00, 28861.08it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n",
-            "Extracting Dataset Version Zip to Traffic-Signal-1 in yolov8:: 100%|██████████| 2572/2572 [00:01<00:00, 2129.88it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\rloading Roboflow project...\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -219,6 +206,23 @@
         "id": "b9983c93",
         "outputId": "fab6d2eb-2deb-4284-a100-1802f8e67b9a"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloaded dataset location: /content/Traffic-Signal-1\n",
+            "\n",
+            "Uploading images for split: train\n",
+            "\n",
+            "Uploading images for split: valid\n",
+            "\n",
+            "Uploading images for split: test\n",
+            "\n",
+            "Upload process completed.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import glob\n",
@@ -255,28 +259,11 @@
         "        print(f\"No {split} split found at {image_dir} or {label_dir}. Skipping.\")\n",
         "\n",
         "print(\"\\nUpload process completed.\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloaded dataset location: /content/Traffic-Signal-1\n",
-            "\n",
-            "Uploading images for split: train\n",
-            "\n",
-            "Uploading images for split: valid\n",
-            "\n",
-            "Uploading images for split: test\n",
-            "\n",
-            "Upload process completed.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,6 +271,18 @@
         "id": "30afcdcb",
         "outputId": "97e65a16-e406-4d58-daa5-d2badc2dcdf2"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "loading Roboflow workspace...\n",
+            "loading Roboflow project...\n",
+            "Available versions:\n",
+            "- Version 1 (name: traffic_signal_detection)\n"
+          ]
+        }
+      ],
       "source": [
         "from roboflow import Roboflow\n",
         "\n",
@@ -295,33 +294,34 @@
         "print(\"Available versions:\")\n",
         "for version in available_versions:\n",
         "    print(f\"- Version {version.version} (name: {version.name})\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "loading Roboflow workspace...\n",
-            "loading Roboflow project...\n",
-            "Available versions:\n",
-            "- Version 1 (name: traffic_signal_detection)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ehORDL2m1ULt"
+      },
+      "outputs": [],
       "source": [
         "project = rf.workspace(\"trafficsignaldetection-lti5q\").project(\"traffic_signal_detection\")\n",
         "\n",
         "dataset = project.version(1).download(\"yolov8\")"
-      ],
-      "metadata": {
-        "id": "ehORDL2m1ULt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
